# TFT-Auto-Play

./: .gitignore  config.yaml  main.py  pyproject.toml
src/core/: Game.py  __init__.py  game_info.py  status.py
tests/: test_screen.py
utils/screen/: screen_client.py  screen_service.py
