[project]
name = "tft-auto-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss==10.0.0",
    "opencv-python>=4.12.0.88",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.13",
    "pywin32>=311",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
